--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ body {
   display: block;
   position: absolute;
   height: 1992px;
-  background-image: url(moon.png);
+  background-image: url(/moon.png);
   background-repeat: no-repeat;
   background-size: contain;
   z-index: -1;
